# template_proj

./: .gitignore  CMakeLists.txt  CMakePresets.json  main.cpp
.cache/clangd/index/: main.cpp.4DF63E2731CC32D0.idx  tests.cpp.0E834D7BAC054B92.idx
.github/workflows/: c-cpp.yml
tests/: tests.cpp
